# perpetual-exchange

./: .dockerignore  .gitattributes  .gitignore  ALL_REPORTS_INDEX.md  ALL_VERSIONS_SUMMARY.md  ARCHITECTURE.md  ART_PERFORMANCE_COMPARISON.md  ART_SIMD_ENHANCED_OPTIMIZATIONS.md  ART_SIMD_OPTIMIZATION.md  ASYNC_PERSISTENCE_SAFETY.md  BENCHMARK_FINAL_REPORT.md  BENCHMARK_GUIDE.md  BENCHMARK_GUIDE.zh-CN.md  BENCHMARK_REPORT.md  CHANGELOG.md  CLEANUP_REPORT.md  CMakeLists.txt  CODE_DOC_CONSISTENCY_REPORT.md  CODE_OPTIMIZATION_SUMMARY.md  COMPILATION_FIX_PROGRESS.md  COMPILATION_FIX_STATUS.md  COMPILATION_SUCCESS_REPORT.md  COMPLETE_COMPARISON.md  COMPLETE_VERSION_REPORT.md  COMPREHENSIVE_COMPARISON_REPORT.md  CONSENSUS_PLUGGABLE_GUIDE.md  CONTRIBUTING.md  CORE_DESIGN_PRINCIPLES.md  DEPLOYMENT_GUIDE.md  DOCKER_BENCHMARK_README.md  DOCKER_QUICK_START.md  DOCKER_SIMD_GUIDE.md  DOCKER_TEST_GUIDE.md  DOCKER_TEST_SUMMARY.md  Dockerfile  Dockerfile.benchmark  Dockerfile.event_sourcing  Dockerfile.matching_service  Dockerfile.phase1_test  Dockerfile.production  (+120 more)
tests/: CMakeLists.txt  TESTING_GUIDE.md  TEST_EXECUTION_REPORT.md  UNIT_TESTS_SUMMARY.md
tests/functional/: CONSENSUS_TEST_README.md  README.md  api_integration_test.cpp  comprehensive_functional_test.cpp  consensus_test.cpp  order_flow_test.cpp
tests/integration/: test_trading_workflow.cpp
tests/performance/: bottleneck_analyzer.cpp  full_chain_benchmark.cpp  test_optimized_v3.cpp  test_optimized_v3_fast.cpp  test_optimized_v3_minimal.cpp  test_optimized_v3_quick.cpp  test_optimized_v3_safe.cpp  test_production_performance.cpp
tests/production/: functional_test.cpp  load_test.cpp  stress_test.cpp
tests/unit/: README.md  test_account_manager.cpp  test_auth_manager.cpp  test_funding_rate_manager.cpp  test_liquidation_engine.cpp  test_matching_engine_event_sourcing.cpp  test_order_validator.cpp  test_orderbook.cpp  test_position_manager.cpp
versions/art/: BENCHMARK_REPORT.md  CMakeLists.txt  benchmark.cpp
versions/art/include/core/: matching_engine_art.h  orderbook_art.h
versions/art_simd/: BENCHMARK_REPORT.md  CMakeLists.txt  benchmark.cpp
versions/art_simd/include/core/: art_tree_simd.h  matching_engine_art_simd.h  orderbook_art_simd.h
versions/event_sourcing/: BENCHMARK_REPORT.md  CMakeLists.txt  benchmark.cpp
versions/event_sourcing/include/core/: event_sourcing.h  matching_engine_event_sourcing.h
versions/event_sourcing/src/core/: event_sourcing.cpp
versions/optimized/: BENCHMARK_REPORT.md  CMakeLists.txt  benchmark.cpp
versions/optimized/include/core/: simd_utils.h
versions/original/: BENCHMARK_REPORT.md  CMakeLists.txt  benchmark.cpp
versions/original/include/: matching_engine.h
versions/original/include/core/: orderbook.h
versions/production_basic/: BENCHMARK_REPORT.md  CMakeLists.txt  benchmark.cpp
versions/production_basic/include/core/: account.h  api_gateway.h  art_tree_simd.h  auth_manager.h  config.h  deterministic_calculator.h  event_sourcing_advanced.h  matching_engine.h  matching_engine_optimized.h  matching_engine_optimized_v3.h  monitoring_system.h  notification_service.h  order_validator.h  orderbook_art.h  persistence_async.h  rest_api_server.h
versions/production_basic/src/: matching_engine_production.cpp
versions/production_basic/src/core/: logger.cpp  metrics.cpp  order_validator.cpp  position_manager.cpp  rate_limiter.cpp
versions/production_fast/: BENCHMARK_REPORT.md  CMakeLists.txt  benchmark.cpp
versions/production_fast/include/core/: art_tree.h  error_handler.h  health_check.h  lockfree_queue.h  order.h  position_manager.h  wal.h
versions/production_fast/src/core/: health_check.cpp  matching_engine_event_sourcing.cpp  orderbook_art_simd.cpp  persistence.cpp
versions/production_safe/: BENCHMARK_REPORT.md  CMakeLists.txt  benchmark.cpp
versions/production_safe/include/core/: account_manager.h  event_sourcing.h  liquidation_engine.h  logger.h  matching_engine_art.h  matching_engine_production_v2.h  matching_engine_production_v3.h  orderbook_art_simd.h  persistence_optimized.h  rate_limiter.h  types.h
versions/production_safe/src/: matching_engine_production_v3.cpp
versions/production_safe/src/core/: account_manager.cpp  auth_manager.cpp  config.cpp  liquidation_engine.cpp  matching_engine_art_simd.cpp  matching_engine_production.cpp  matching_engine_production_v2.cpp  matching_engine_production_v3.cpp  orderbook_art.cpp
versions/production_safe_optimized/: ACTUAL_BENCHMARK_COMPARISON.md  ALL_OPTIMIZATIONS_SUMMARY.md  ASYNC_QUEUE_DATA_LOSS_ANALYSIS.md  BENCHMARK_BATCH_CONFIRM_REPORT.md  BENCHMARK_FINAL_RESULTS.md  BENCHMARK_FIXED_REPORT.md  BENCHMARK_REPORT.md  CMakeLists.txt  COMPARISON_REPORT.md  FINAL_BENCHMARK_COMPARISON.md  FINAL_PERFORMANCE_REPORT.md  FURTHER_OPTIMIZATION_RECOMMENDATIONS.md  LATENCY_EXPLANATION.md  OPTIMIZATION_CODE_EXAMPLES.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_DESIGN.md  OPTIMIZATION_FINAL.md  OPTIMIZATION_FINAL_REPORT.md  OPTIMIZATION_IMPLEMENTATION_COMPLETE.md  OPTIMIZATION_STATUS.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_V2.md  OPTIMIZATION_V3.md  OPTIMIZATION_V4.md  OPTIMIZED_BENCHMARK_FINAL_REPORT.md  P99延迟降低计算分析.md  P99延迟降低详细分析.md  PERFORMANCE_OPTIMIZATION_SUCCESS.md  README.md  SAFETY_LEVEL_COMPARISON.md  STATUS.md  STRESS_TEST_RESULTS.md  VERIFICATION_GUIDE.md  VERIFICATION_RESULTS.md  VERIFICATION_SUMMARY.md  ZERO_DATA_LOSS_GUARANTEE.md  ZERO_DATA_LOSS_IMPLEMENTATION.md  ZERO_LOSS_OPTIMIZATION_SUMMARY.md  benchmark.cpp  benchmark_matching_shard.cpp  (+43 more)
versions/production_safe_optimized/include/core/: matching_engine_production_safe_optimized.h  sharded_matching_engine.h  trading_shard.h  wal.h
versions/production_safe_optimized/src/: matching_engine_production_safe_optimized.cpp
versions/production_safe_optimized/src/core/: matching_engine_production_v2.cpp  sharded_matching_engine.cpp  trading_shard.cpp  (+1 more)
versions/production_v2/: CMakeLists.txt
versions/production_v2/src/: matching_engine_production_v2.cpp
versions/production_v3/: CMakeLists.txt
versions/production_v3/src/: matching_engine_production_v3.cpp
(+246 files in other folders)
